--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,6 +1,11 @@
 name: Build & Deploy GitHub Pages
 on:
   push: { branches: [ main ] }
+  # uncomment this during debugging
+  # pull_request:
+  #   branches: [ main ]
+
+  # To run this workflow manually from the Actions tab
   workflow_dispatch:
 
 permissions:
