--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 title: genai-demo
 theme: minimal-mistakes-jekyll
 minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-permalink: /:path/
+permalink: pretty
 
 # Site URL configuration
 url: "" # Empty for local development and GitHub Pages
