Fix baseurl in docs pages

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,5 +1,6 @@
 all: help
 
+
 install:
 	@echo "Configuring bundler for local gem installation.."
 	@bundle config set --local path 'vendor/bundle'
@@ -7,8 +8,8 @@ install:
 	@bundle install
 
 serve:
-	@echo "Starting Jekyll development server with live reload.."
-	@bundle exec jekyll serve --host 0.0.0.0
+	@echo "Starting Jekyll development server with live reload (with baseurl).."
+	@bundle exec jekyll serve --host 0.0.0.0 --baseurl "/genai-demo"
 
 build:
 	@echo "Building Jekyll site.."
@@ -28,7 +29,7 @@ help:
 	@echo "Available make targets:"
 	@echo "  make help         - Print this help message"
 	@echo "  make install      - Configure bundler and install gem dependencies"
-	@echo "  make serve        - Start Jekyll development server (http://localhost:4000)"
+	@echo "  make serve        - Start Jekyll development server (http://localhost:4000/genai-demo)"
 	@echo "  make build        - Build the static site"
 	@echo "  make clean        - Remove all build artifacts and dependencies"
 	@echo ""
