Add hello-claude-agent-sdk notebook

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,13 @@ PYTHONUNBUFFERED=1
 
 # Anthropic Claude
 # ANTHROPIC_API_KEY=your-anthropic-api-key-here
+CLAUDE_CODE_USE_BEDROCK=1
+AWS_REGION=us-east-1
+ANTHROPIC_MODEL=global.anthropic.claude-sonnet-4-5-20250929-v1:0
+BEDROCK_ENDPOINT_URL=https://bedrock.us-east-1.amazonaws.com
+BEDROCK_REGION_NAME=us-east-1
+CLAUDE_CODE_MAX_OUTPUT_TOKENS=4096
+MAX_THINKING_TOKENS=1024
 
 # Google AI
 # GOOGLE_API_KEY=your-google-api-key-here
@@ -82,5 +89,4 @@ PYTHONUNBUFFERED=1
 # 2. For Linux: Set HOST_UID and HOST_GID to match your user (see above)
 # 3. For Mac/Windows: Docker Desktop handles UID/GID automatically
 # 4. Add service-specific variables as you add new GenAI examples
-# 5. Use strong, unique values for any passwords/secrets
-# 6. Consider using .env.development, .env.staging patterns for multiple environments
+# 5. Consider using .env.development, .env.staging patterns for multiple environments
