--- a/.env.example
+++ b/.env.example
@@ -47,7 +47,7 @@ CLAUDE_CODE_MAX_OUTPUT_TOKENS=4096
 MAX_THINKING_TOKENS=1024
 
 # Google AI
-# GOOGLE_API_KEY=your-google-api-key-here
+GOOGLE_API_KEY=your-google-api-key-here
 
 # Hugging Face
 # HUGGINGFACE_API_KEY=your-huggingface-api-key-here
