--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "claude-agent-sdk>=0.1.8",
+    "mlflow>=3.7.0",
+    "strands-agents>=1.19.0",
+    "strands-agents-tools>=0.2.17",
 ]
 
 [project.scripts]
