--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,14 @@ requires-python = ">=3.12"
 dependencies = [
     "claude-agent-sdk>=0.1.8",
     "mlflow>=3.7.0",
+    "rich>=14.2.0",
     "strands-agents>=1.19.0",
     "strands-agents-tools>=0.2.17",
 ]
 
 [project.scripts]
 genai-demo = "genai_demo:main"
+rich-diff = "genai_demo.rich_diff:main"
 
 [build-system]
 requires = ["uv_build>=0.9.2,<0.10.0"]
